MobileBgWatch/MobileBgWatch/wwwroot/css/site.css
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 60px;
}

.btn-secondary {
    background-color: #007acc; /* Change to your desired background color */
}

    .btn-secondary:hover {
        background-color: #890606; /* Darker shade for hover state */
    }

#searchUrlInput {
    background-color: #212121;
}

#submitButton {
    background-color: #007acc;
}

.welcome-header {
    padding-bottom: 50px;
}

.renderBody {
    margin-left: 10px;
    margin-right: 10px;
}

#searchUrlBox form {
    padding-bottom: 10px;
}

.ul_container {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-wrap: wrap;
}

.new_item {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 300px; /* Adjust as needed for layout */
    height: 400px;
    margin: 4px;
    border: 2px solid #3d3d3d; /* Optional: for visualization */
    padding: 5px; /* Optional: for spacing */
    box-sizing: border-box;
    background: #212121; /* Optional: for background color */
    overflow: hidden;
}

.no_underline {
    text-decoration: none;
}

.item_pic {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.item_pic img {
    width: 100%;
    height: auto;
    max-height: 200px;
    object-fit: cover;
}

.item_text {
    padding-bottom: 20px;
    color: #b7b7b7;
}

.name_and_price {
    display: flex;
    flex-direction: column;
}

.price_container {
    display: flex;
    flex-direction: column;
}

.item_price {
    margin-bottom: 0px;
    font-weight: 800;
}

.item_previous {
    color: #b7b7b7;
}

.item_previous_price {
    font-weight: 800;
}

